--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="container">
                             <div class="slide-content">
                                 <div data-swiper-parallax="200" class="slide-subtitle">
-                                    <h4>WERE GETTING MARRIED</h4>
+                                    <h4>WE ARE GETTING MARRIED</h4>
                                 </div>
                                 <div data-swiper-parallax="300" class="slide-title">
                                     <h2>Save Our Date</h2>
@@ -133,7 +133,7 @@
                                 <div class="couple-text">
                                     <div class="couple-content">
                                         <h4>Dr. Lata Narwani</h4>
-                                        <p>Hi I am Lata Narwani. I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.</p>
+                                        <h3>D/O Mr. Indra Kumar Narwani & Mrs. Mamta Narwani</h3>
                                     </div>
 <!--                                    <div class="social-icon">
                                         <ul>
@@ -153,8 +153,9 @@
                                 </div>
                                 <div class="couple-text">
                                     <div class="couple-content">
-                                        <h4>CS Manish Lokhwani </h4>
-                                        <p>Hi I am Manish Lokhwani. I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.</p>
+                                        <h4>CS Manish Lokwani </h4>
+                                        <h3> S/O Mr. Manohar Lokwani & Mrs. Renu Lokwani
+                                        </h3>
                                     </div>
 <!--                                    <div class="social-icon">
                                         <ul>
@@ -172,27 +173,27 @@
             </div>
         </div>
         <!-- couple-area end -->
-        <!-- start count-down-section -->
-        <div class="count-down-area count-down-area-sub">
-            <section class="count-down-section section-padding parallax" data-speed="7">
-                <div class="container">
-                    <div class="col-12 text-center">
-                        <h2 class="big"><span>We Are Waiting For.....</span> The Big Day <span>Bless us with your presence</span></h2>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="count-down-clock">
-                                <div id="clock">
-                                </div>
-                            </div>
+
+
+        <!-- cta area start-->
+        <div class="cta-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="cta-content">
+                            <h2>Welcome to our big day</h2>
+                            <p>Mr. Indra Kumar Narwani & Mrs. Mamta Narwani invite you to the wedding of their daughter.
+                                Please accept this as our personal invitation to celebrate our big day with us.
+                                The pleasure of your company at the marriage of our daughter is really important to us.</p>
+                            <div class="btn btn-3"><a href="#rsvp" class="go-rsvp-area">Send e-Blessings</a></div>
+                            <!-- <div class="btn btn-2"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>-->
                         </div>
                     </div>
-                    <!-- end row -->
                 </div>
-                <!-- end container -->
-            </section>
+            </div>
         </div>
-        <!-- end count-down-section --> 
+
+
         <!-- start story-section -->
         <section class="story-section section-padding" id="story">
             <div class="container">
@@ -301,24 +302,29 @@
             </div> <!-- end container -->
         </section>
         <!-- end story-section -->
-        <!-- cta area start-->
-        <div class="cta-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="cta-content">
-                            <h2>Welcome to our big day</h2>
-                            <p>Mr. Indra Kumar Narwani & Mrs. Mamta Narwani invite you to the wedding of their daughter.
-                                Please accept this as our personal invitation to celebrate our big day with us.
-                                The pleasure of your company at the marriage of our daughter is really important to us.</p>
-                            <div class="btn btn-3"><a href="#rsvp" class="go-rsvp-area">Send e-Blessings</a></div>
-                           <!-- <div class="btn btn-2"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>-->
+
+        <!-- start count-down-section -->
+        <div class="count-down-area count-down-area-sub">
+            <section class="count-down-section section-padding parallax" data-speed="7">
+                <div class="container">
+                    <div class="col-12 text-center">
+                        <h2 class="big"><span>We Are Waiting For.....</span> The Big Day <span>Bless us with your presence</span></h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="count-down-clock">
+                                <div id="clock">
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <!-- end row -->
                 </div>
-            </div>
+                <!-- end container -->
+            </section>
         </div>
-        </div>
+        <!-- end count-down-section -->
+
 
         <!-- groomsmen-bridesmaid-area start -->
         <div id="people" class="groomsmen-bridesmaid-area pt--150 pb--70">
@@ -630,7 +636,7 @@
             <div class="container">
                 <div class="row" style="margin-left: -15;margin-top: 30px;">
                     <div class="text">
-                        <h2>Lata  & Manish Forever</h2>
+                        <h2>Lata & Manish Forever</h2>
                         <p>Thank you</p>
                     </div>
 
