--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <li><a href="#couple">Couple</a></li>
                             <li><a href="#story">Events</a></li>
                             <li><a href="#people">People</a></li>
-                           <!-- <li><a href="#gallery">Gallery</a></li>-->
+                           <li><a href="#gallery">Gallery</a></li>
                             <li><a href="#rsvp">Bless Us</a></li>
                         </ul>
                     </div><!-- end of nav-collapse -->
