--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                 <i class="fi flaticon-play-button"></i>
             </button>
             <div class="music-holder">
-                <iframe src="https://www.youtube.com/embed/tm-YxjrQVZw?autoplay=1&mute=0"></iframe>
+                <iframe src="https://www.youtube.com/embed/tm-YxjrQVZw?autoplay=1" allow="autoplay"></iframe>
             </div>
         </div>
         <!-- end music box -->
