--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="themepresss">
 
     <!-- Page Title -->
-    <title> Lata & Manish </title>
+    <title> Lata & Manish marriage invitation</title>
 
     <!-- Icon fonts -->
     <link href="assets/css/themify-icons.css" rel="stylesheet">
