--- a/index.html
+++ b/index.html
@@ -580,6 +580,22 @@
                                     </div>
                                 </a>
                             </div>
+                            <div class="grid Pre-Wedding">
+                                <a href="assets/images/gallery/img-7.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="assets/images/gallery/img-7.jpg" alt class="img img-responsive">
+                                    <div class="icon">
+                                        <i class="ti-plus"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="grid Pre-Wedding">
+                                <a href="assets/images/gallery/img-8.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="assets/images/gallery/img-8.jpg" alt class="img img-responsive">
+                                    <div class="icon">
+                                        <i class="ti-plus"></i>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
