--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                         <div class="container">
                             <div class="slide-content">
                                 <div data-swiper-parallax="200" class="slide-subtitle">
+                                    <h4>|| Radha Soami ||</h4>
+                                    <br>
+                                </div>
+                                <div data-swiper-parallax="200" class="slide-subtitle">
                                     <h4>WE ARE GETTING MARRIED</h4>
                                 </div>
                                 <div data-swiper-parallax="300" class="slide-title">
