--- a/index.html
+++ b/index.html
@@ -509,7 +509,9 @@
                     <div class="cta-content">
                         <h2>Waiting to welcome you</h2>
                         <p>Mamta & Indra Kumar Narwani (Ph. : 9412169996)<br> Jayant Narwani (Ph. : 9410201112)
-                            <br> Meera & Lila Ram Narwani <br>Tara & Prakash Chand Narwani
+                        </p>
+                        <h4 style="color: white; font-family: cursive;font-size: 26px;">Along with...</h4>
+                           <p>Meera & Lila Ram Narwani <br>Tara & Prakash Chand Narwani
                             <br> Neetu & Harish Kumar Narwani<br> Kanta & DR Narwani
                             <br> Roshani & Kamlesh Narwani <br>Sangeeta & Manohar Pahlajani </p>
                     </div>
