--- a/index.html
+++ b/index.html
@@ -229,6 +229,26 @@
                                 </div>
                             </div>
 
+                            <div class="row">
+                                <div class="col col-md-6 text-holder right-heart">
+                                    <span class="heart">
+                                        <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                    </span>
+                                    <div class="story-text right-align-text">
+                                        <h3>Thread Ceremony of Jayant (Brother) </h3>
+                                        <span class="date">Dec 9 2020, 9 AM</span>
+                                        <p>We solicit your blessings and request presence of your company to grace the occasion of upanayan ceremony of our son. Join us and bless him for progress on the path of knowledge and wisdom. </p> <br>
+                                        <snap>Venue: </snap>  <p>Sindhu Bhawan, F- 42,Kamla Nagar, Agra</p>
+                                        <div class="btn btn-2"><a class="popup-gmaps" href="https://maps.google.com/maps?q=sindhu%20bhawan%20agra&t=&z=13&ie=UTF8&iwloc=&output=embed">Location</a></div>
+                                    </div>
+                                </div>
+                                <div class="col col-md-6">
+                                    <div class="img-holder right-align-text story-slider">
+                                        <img src="assets/images/story/img-5.jpg" alt class="img img-responsive">
+                                    </div>
+                                </div>
+                            </div>
+
 
                             <div class="row">
                                 <div class="col col-md-6 text-holder right-heart">
@@ -260,7 +280,7 @@
                                     <div class="story-text right-align-text">
                                         <h3>Mehandi</h3>
                                         <span class="date">Dec 9 2020, 5 PM</span>
-                                        <p> Join us and Mehandi ceremony and get some henna. </p>
+                                        <p> Join us at Mehandi ceremony and get some henna. </p>
                                         <snap>Venue: </snap>  <p>Sindhu Bhawan, F- 42,Kamla Nagar, Agra</p>
                                         <div class="btn btn-2"><a class="popup-gmaps" href="https://maps.google.com/maps?q=sindhu%20bhawan%20agra&t=&z=13&ie=UTF8&iwloc=&output=embed">Location</a></div>
                                     </div>
