--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
             <!-- end swiper-wrapper -->
         </section>
         <!-- end of hero slider -->
+        <audio controls autoplay style="visibility: hidden;">
+            <source src="assets/din.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
          <!-- couple-area start -->
         <div id="couple" class="couple-area section-padding">
             <div class="container">
@@ -690,12 +694,12 @@
         </footer>
         <!-- end site-footer -->
         <!-- strat music-box -->
-        <div class="music-box">
+        <div class="music-box" style="visibility: hidden;">
             <button class="music-box-toggle-btn">
                 <i class="fi flaticon-play-button"></i>
             </button>
             <div class="music-holder">
-                <iframe src="https://www.youtube.com/embed/tm-YxjrQVZw?autoplay=1" allow="autoplay"></iframe>
+               <!-- <iframe src="https://www.youtube.com/embed/tm-YxjrQVZw?autoplay=1" allow="autoplay"></iframe>-->
             </div>
         </div>
         <!-- end music box -->
