--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- end swiper-wrapper -->
         </section>
         <!-- end of hero slider -->
-        <audio controls autoplay style="visibility: hidden;">
+        <audio controls autoplay loop style="visibility: hidden;">
             <source src="assets/din.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
