--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                         <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                                     </span>
                                     <div class="story-text right-align-text">
-                                        <h3>Thread Ceremony of Jayant (Brother) </h3>
+                                        <h3>Thread Ceremony of Jayant </h3>
                                         <span class="date">Dec 9 2020, 9 AM</span>
                                         <p>We solicit your blessings and request presence of your company to grace the occasion of upanayan ceremony of our son. Join us and bless him for progress on the path of knowledge and wisdom. </p> <br>
                                         <snap>Venue: </snap>  <p>Sindhu Bhawan, F- 42,Kamla Nagar, Agra</p>
