--- a/index.html
+++ b/index.html
@@ -687,8 +687,9 @@
                     </div>
                 </div>
             </div> <!-- end container -->
+            <p style="position: absolute;top: 96%; font-size: 11px;"> Designed by: Jayant Narwani </p>
         </footer>
-        <!-- end site-footer -->
+    <!-- end site-footer -->
         <!-- strat music-box -->
         <div class="music-box" style="visibility: hidden;">
             <button class="music-box-toggle-btn">
