--- a/index.html
+++ b/index.html
@@ -686,6 +686,9 @@
                         <a href="#" class="back-to-top-btn"><span><i class="ti-arrow-up"></i></span></a>
                     </div>
                 </div>
+                <p>
+                   <br> For your safety and ours, Please remember SMS (Sanitizer, Mask & Social distance)
+                </p>
             </div> <!-- end container -->
             <p style="position: absolute;top: 96%; font-size: 11px;"> Designed by: Jayant Narwani </p>
         </footer>
