--- a/index.html
+++ b/index.html
@@ -672,7 +672,26 @@
             </div>
         </div>
 
+    <section id="gallery" class="gallery-section section-padding">
+        <div class="container">
+            <div class="col-l2">
+                <div class="section-title text-center">
 
+                </div>
+                <div class="section-title text-center">
+                    <h2> <br>Capture it,<br> Share it, <br>Hashtag it, <br>#Manita</h2>
+                </div>
+            </div>
+
+
+
+            <div class="row">
+                <div class="col col-xs-12 sortable-gallery">
+
+                </div>
+            </div>
+        </div>
+    </section>
         <!-- start site-footer -->
         <footer class="site-footer site-footer-2">
             <div class="container">
