--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                         <img src="assets/images/story/img-4.jpg" alt class="img img-responsive">
                                         <div class="video-btn">
                                             <ul>
-                                                <li><a href="https://www.youtube.com/embed/tm-YxjrQVZw?autoplay=1" class="video-btn" data-type="iframe">
+                                                <li><a href="https://www.youtube.com/embed/eJl-jQCHsns?autoplay=1" class="video-btn" data-type="iframe">
                                                     <i class="fi flaticon-play-button"></i>
                                                 </a>
                                                 </li>
