--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                             <textarea class="contact-textarea" placeholder="Message" name="blessings"></textarea>
                                         </div>
                                         <div class="col-12 text-center">
-                                            <button id="submit" class="submit">Send Invitation</button>
+                                            <button id="submit" class="submit">Send e-Blessings</button>
                                             <span id="loader"><i class="fa fa-refresh fa-spin fa-3x fa-fw"></i></span>
                                         </div>
                                          <div class="col col-md-12 success-error-message">
