--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                                 </div>
                             </div>
                             <div class="contact-form form-style">
-                                <form id="rsvp-form" action="https://formspree.io/f/xknpvnor" class="validate-rsvp-form" method="post">
+                                <form id="rsvp-form" action="https://formspree.io/f/mnqobgkl" class="validate-rsvp-form" method="post">
                                     <div class="row">
                                         <div class="col-12 col-sm-6">
                                             <input type="text" placeholder="Your Name*" id="fname" name="name">
@@ -656,7 +656,7 @@
                                             <textarea class="contact-textarea" placeholder="Message" name="blessings"></textarea>
                                         </div>
                                         <div class="col-12 text-center">
-                                            <button id="submit" class="submit">Send e-Blessings</button>
+                                            <button id="submit" class="submit">Send Blessings</button>
                                             <span id="loader"><i class="fa fa-refresh fa-spin fa-3x fa-fw"></i></span>
                                         </div>
                                          <div class="col col-md-12 success-error-message">
